objects/Time_Off_Balance__c.object
<CustomObject>
    <description>used to hold the accruals for time off</description>
    <fields>
        <fullName>Alias__c</fullName>
        <formula>Employee__r.Alias</formula>
        <inlineHelpText>formula field that pulls the employee&apos;s alias into the record for matching purposees</inlineHelpText>
        <label>Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_2014__c</fullName>
        <formula>Starting_Balance_2014__c - Total_Approved_2014__c - Total_Pending_Requests_2014__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available (2014)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_2015__c</fullName>
        <formula>Starting_Balance_2015__c  -  Total_Approved_2015__c  -  Total_Pending_Requests_2015__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available (2015)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <formula>Starting_Balance__c - Total_Approved__c - Total_Pending_Requests__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available (2013)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Department__c</fullName>
        <formula>Employee__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Manager__c</fullName>
        <formula>Employee__r.Reports_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>Employee__r.EmployeeNumber</formula>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Profile__c</fullName>
        <formula>Employee__r.Profile.Name</formula>
        <inlineHelpText>formula field</inlineHelpText>
        <label>Employee Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_SFDC_Id__c</fullName>
        <formula>Employee__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee SFDC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Start_Date__c</fullName>
        <formula>Employee__r.Start_Date__c</formula>
        <label>Employee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <formula>IF( Employee__r.IsActive =True, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Off_Balances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_Key__c</fullName>
        <label>Import Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Employee__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the employee&apos;s last name from their user profile</inlineHelpText>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owners_Email__c</fullName>
        <formula>Employee__r.Email</formula>
        <label>Owners Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTO_Approver__c</fullName>
        <formula>Employee__r.PTO_Approver__r.FirstName &amp;&quot; &quot;&amp;  Employee__r.PTO_Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the PTO Approver from the user&apos;s profile</inlineHelpText>
        <label>PTO Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Notice__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UAdb&amp;oid=00D700000008zHZ&amp;lastMod=1325271468000&quot;, &quot;PTO Balance Notice&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Notice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Balance_2012__c</fullName>
        <label>Starting Balance (2012)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Balance_2014__c</fullName>
        <label>Starting Balance (2014)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Balance_2015__c</fullName>
        <label>Starting Balance (2015)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Balance__c</fullName>
        <label>Starting Balance (2013)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Approved_2012__c</fullName>
        <label>Total Approved (2012)</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2013 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>equals</operation>
            <value>Planned, Unplanned, LOA 1: these hours DO come out of the PTO balance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2012 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Approved_2014__c</fullName>
        <label>Total Approved (2014)</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2013 11:59 PM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>equals</operation>
            <value>Planned, Unplanned, LOA 1: these hours DO come out of the PTO balance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2015 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Approved_2015__c</fullName>
        <label>Total Approved (2015)</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2014 11:59 PM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>equals</operation>
            <value>Planned, Unplanned, LOA 1: these hours DO come out of the PTO balance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2016 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Approved__c</fullName>
        <inlineHelpText>does not include requests before 1/1/2013</inlineHelpText>
        <label>Total Approved (2013)</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2012 11:59 PM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>equals</operation>
            <value>Planned, Unplanned, LOA: these hours DO come out of the PTO balance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2014 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Requests_2014__c</fullName>
        <label>Total Pending Requests (2014)</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved, Denied, Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2013 11:59 PM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>equals</operation>
            <value>Planned, Unplanned, LOA 1: these hours DO come out of the PTO balance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2015 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Requests_2015__c</fullName>
        <label>Total Pending Requests (2015)</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved, Denied, Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2014 11:59 PM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>equals</operation>
            <value>Planned, Unplanned, LOA 1: these hours DO come out of the PTO balance</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Requests__c</fullName>
        <label>Total Pending Requests (2013)</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved, Denied, Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2012 11:59 PM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>equals</operation>
            <value>Planned, Unplanned, LOA: these hours DO come out of the PTO balance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2014 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Un_Planned_Time_Off_Counter__c</fullName>
        <inlineHelpText>Sums total of the days for time off requests where the type is unplanned.</inlineHelpText>
        <label>Un Planned Time Off Counter</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>contains</operation>
            <value>Unplanned</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.To_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unpaid_Time_Off_Counter__c</fullName>
        <description>Keeps a rolling total of unpaid time off for the year</description>
        <inlineHelpText>Keeps a rolling total of unpaid time off for the year</inlineHelpText>
        <label>Unpaid Time Off Counter</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>equals</operation>
            <value>Unpaid Time Off</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.From_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.To_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test_unplanned_PTO__c</fullName>
        <label>Test: unplanned PTO</label>
        <summarizedField>SFDC_Paid_Time_Off__c.Hours_to_be_Used__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Paid_Time_Off__c.Type__c</field>
            <operation>equals</operation>
            <value>Unplanned</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Paid_Time_Off__c.Time_Off_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Time Off Balance</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Time Off Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Off Balances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>